objects/Intervention_Session_Result__c.object
<CustomObject>
    <description>The Intervention Session Result is an object that captures the outcome of a student&apos;s participation in an Intervention Session. The result includes duration and notes.</description>
    <fields>
        <fullName>Amount_of_Time__c</fullName>
        <inlineHelpText>Amount of time spent with a student (in minutes) in a single Intervention Session</inlineHelpText>
        <label>Amount of Time (in minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exit_Ticket__c</fullName>
        <label>Exit Ticket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Student_Comment__c</fullName>
        <inlineHelpText>Area for an individual comment for this student for this Intervention Session</inlineHelpText>
        <label>Individual Student Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intervention_Session_Date__c</fullName>
        <formula>Intervention_Session__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date of the Intervention Session</inlineHelpText>
        <label>Intervention Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intervention_Session__c</fullName>
        <inlineHelpText>This field connects the Intervention Session Result record to the correct Intervention Session.</inlineHelpText>
        <label>Intervention Session</label>
        <referenceTo>Intervention_Session__c</referenceTo>
        <relationshipLabel>Intervention Session Results</relationshipLabel>
        <relationshipName>Intervention_Session_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Skill__c</fullName>
        <formula>Intervention_Session__r.Skill_Primary__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Skill</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Student_Section__r.Section__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Program name for associated intervention session results</description>
        <formula>Student_Section__r.Section__r.Program__c</formula>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Student_s_Name__c</fullName>
        <formula>Student_Section__r.Student__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Student&apos;s Name</inlineHelpText>
        <label>Related Student&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_ID__c</fullName>
        <formula>Student_Section__r.Section__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <formula>Student_Section__r.Section__r.Auto_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Intervention Section name related to this Intervention Session Result</inlineHelpText>
        <label>Section Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_DOW__c</fullName>
        <description>Calculation of the session data into a corresponding day of the week</description>
        <formula>CASE(
MOD( Intervention_Session_Date__c - DATE( 1900, 1, 7 ), 7 ),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;,
&quot;Saturday&quot;
)</formula>
        <inlineHelpText>This value derive from a calculation of Intervention_Session_Date__c</inlineHelpText>
        <label>Session DOW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkillsCovered__c</fullName>
        <label>Other Skills</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Covered__c</fullName>
        <formula>Intervention_Session__r.Skills__c</formula>
        <label>Skills Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Reference_ID__c</fullName>
        <description>Reference ID for student engaged in an intervention session</description>
        <formula>Student_Section__r.Student__r.Reference_Id__c</formula>
        <label>Student Reference ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Section__c</fullName>
        <inlineHelpText>This field connects the Intervention Session Result record to the correct Student/Section.</inlineHelpText>
        <label>Student/Section</label>
        <referenceTo>Student_Section__c</referenceTo>
        <relationshipLabel>Intervention Session Results</relationshipLabel>
        <relationshipName>Intervention_Session_Results</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field connects the Student record to the Intervention Session Result</inlineHelpText>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Intervention Session Results</relationshipLabel>
        <relationshipName>Intervention_Session_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>section_validation_match__c</fullName>
        <formula>Student_Section__r.Section__c &lt;&gt; Intervention_Session__r.Section__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>section validation match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>text_validate_field__c</fullName>
        <formula>Student_Section__r.Section__c  &amp;&quot;    &quot; &amp; &quot;/&quot; &amp; &quot;    &quot; &amp;  Intervention_Session__r.Section__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>text validate field</label>
        <type>Text</type>
    </fields>
    <label>Intervention Session Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount_of_Time__c</columns>
        <columns>Intervention_Session__c</columns>
        <columns>Student_Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ISR-{000000}</displayFormat>
        <label>Time ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intervention Session Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Over_500_Session_Time</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_of_Time__c &gt;= 500</errorConditionFormula>
        <errorDisplayField>Amount_of_Time__c</errorDisplayField>
        <errorMessage>Session time for a day must be less then 500 minutes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Session_Time_Less_than_1</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_of_Time__c &lt; 1</errorConditionFormula>
        <errorDisplayField>Amount_of_Time__c</errorDisplayField>
        <errorMessage>Session time cannot be less than 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Section_Validation</fullName>
        <active>true</active>
        <description>Validate that the Section associated with the related Student/Section record is the same as the Section  associated with the related Intervention Session record.</description>
        <errorConditionFormula>Student_Section__r.Section__c  &lt;&gt;  Intervention_Session__r.Section__c</errorConditionFormula>
        <errorMessage>Please verify that the Section record associated with the Student/Section record and Intervention Section record are the same.</errorMessage>
    </validationRules>
</CustomObject>