objects/Intervention_Session_Result__c/fields/ISR_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>ISR_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISR 18 Digit ID</label>
    <type>Text</type>
</CustomField>