objects/Intervention_Session_Result__c/fields/UniqueSessionKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueSessionKey__c</fullName>
    <label>UniqueSessionKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>