objects/Intervention_Session_Result__c/validationRules/Prevent_Over_500_Session_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Over_500_Session_Time</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_of_Time__c &gt;= 500</errorConditionFormula>
    <errorDisplayField>Amount_of_Time__c</errorDisplayField>
    <errorMessage>Session time for a day must be less than 500 minutes.</errorMessage>
</ValidationRule>