objects/Intervention_Session_Result__c/validationRules/Prevent_Session_Time_Less_than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Session_Time_Less_than_1</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_of_Time__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Amount_of_Time__c</errorDisplayField>
    <errorMessage>Session time cannot be less than 1.</errorMessage>
</ValidationRule>