objects/Intervention_Session_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_of_Time__c</columns>
    <columns>Intervention_Session__c</columns>
    <columns>Student_Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>